mulit-cluster/openshift-4-11/ocp-route/cafeone/route/route-coffee-edge.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    virtual-server.f5.com/multiClusterServices: '[{"clusterName": "cluster2", "svcName":
          "svc", "namespace": "cafeone", "port": "8080" }]'
    # you can define either service port or target port in the port value
  labels:
    f5nr: "true"
  name: cafe-coffee-edge
  namespace: cafeone
  annotations:
    # annotations
    # default clientssl profile
    # health monitoring
    virtual-server.f5.com/clientssl: /Common/clientssl
    virtual-server.f5.com/health: |
      [
        {
          "path": "cafeone.example.com/",
          "send": "HTTP GET /",
          "interval": 10,
          "timeout": 31
        }
      ]
spec:
  host: cafeone.example.com
  path: "/coffee"
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: coffee-svc
